[package]
name = "stega"
version = "0.1.0"
authors = ["Orlando Valverde <orlando.jesig.va@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A simple tool and library to conceal and reveal UTF-8 encoded data within PNG images"
homepage = "https://github.com/septum/stega"
repository = "https://github.com/septum/stega"
documentation = "https://docs.rs/stega"
readme = "README.md"
keywords = ["steganography", "conceal", "reveal", "utf-8", "png"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.21", default-features = false, features = ["derive", "std"]}
image = { version = "0.24.3", default-features = false , features = ["png"]}
thiserror = "1.0.33"

[dev-dependencies]
tempfile = "3.3.0"
