[package]
name = "stega"
version = "0.1.2"
authors = ["Orlando Valverde <orlando.jesig.va@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A simple tool and library to conceal and reveal UTF-8 encoded data within PNG images"
homepage = "https://github.com/septum/stega"
repository = "https://github.com/septum/stega"
documentation = "https://docs.rs/stega"
readme = "README.md"
keywords = ["steganography", "conceal", "reveal", "utf-8", "png"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dev-dependencies]
tempfile = "3.21"
